<resources>
    <string name="app_name">Tutorial Upload Image</string>
    <string name="folder_name">uploadimage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>
    <string name="title_camera">Camera</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_minimize">Minimize</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_done_and_save">Done and Save</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_save">Save</string>
    <string name="btn_create">Create</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="confirm_delete_title">Delete Image</string>
    <string name="delete_success_message">The image is successfully removed.</string>
    <string name="confirm_save">Are you sure you want to save all this items?</string>
    <string name="confirm_save_title">Save Image</string>
    <string name="save_success_message">Your data has been successfully saved.</string>
    <string name="dialog_add_note">Add New Note</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
</resources>
