<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"
            android:columnCount="3">

        <TextView
                android:id="@+id/dialog_title"
                android:text="@string/dialog_add_note"
                android:textSize="16dip"
                android:layout_columnSpan="3"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:background="@drawable/textlines"
                android:layout_width="match_parent"
                />

        <TextView
                android:text="@string/label_title"
                android:layout_gravity="right"
                />

        <EditText
                android:ems="10"
                android:id="@+id/input_title"
                android:inputType="text"
                android:singleLine="true"
                />

        <TextView
                android:text="@string/label_description"
                android:layout_gravity="right"
                android:layout_column="0"
                />

        <EditText
                android:ems="10"
                android:id="@+id/input_description"
                android:inputType="textMultiLine"
                android:singleLine="false"
                />

        <Space
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                />

    </GridLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

        <Button
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/btn_cancel"
                android:background="@color/btnWarning"
                android:textColor="#fff"
                android:visibility="visible"
                android:onClick="closeDialog"
                android:clickable="true"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/btn_dialog_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_save"
                android:background="@color/btnSuccess"
                android:textColor="#fff"
                android:visibility="visible"
                android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>