<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fcamera_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".fragments.CameraFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.1"
                    android:weightSum="2">

                <Button
                        android:id="@+id/btn_remove"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:drawableLeft="@drawable/ic_delete_black_24dp"
                        android:background="@android:color/transparent"
                        android:text="@string/btn_remove"
                        android:visibility="gone"/>

                <Button
                        android:id="@+id/btn_minimize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:drawableRight="@drawable/ic_zoom_out_black_24dp"
                        android:background="@android:color/transparent"
                        android:text="@string/btn_minimize"
                        android:visibility="gone"/>

            </LinearLayout>

            <ImageView
                    android:id="@+id/result_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.7"
                    android:src="@drawable/ic_picture_holder_256" />

            <ImageView
                    android:id="@+id/expanded_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/list_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:weightSum="2"
                android:visibility="gone">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8">

                <ListView
                        android:id="@+id/image_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></ListView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/btn_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_take_picture"
                android:background="@color/btnInfo"
                android:paddingHorizontal="20dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_done_and_save"
                android:background="@color/btnSuccess"
                android:paddingHorizontal="20dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>